--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     
     <center>
       <center><b><i><h>VEJA COMO FAZER MAIS DE 100.000,00MT A BAIXO</h></i></b></center>
-      <video id="video" controls src="✅ AVIATOR COMO GANHAR NO AVIATOR MELHOR ESTRATÉGIA PARA GANHAR NO AVIATOR ATUALIZADA 2025_(720P_HD).mp4" type="video/mp4"></video>
+      <video id="video" controls src="VID-20250112-WA0001.mp4" type="video/mp4"></video>
     </center>
      
      <center><button id="fech">FECHAR TELA</button></center>
